--- a/项目_二阶段/src/main/webapp/WEB-INF/web.xml
+++ b/项目_二阶段/src/main/webapp/WEB-INF/web.xml
@@ -4,4 +4,13 @@
 
 <web-app>
   <display-name>Archetype Created Web Application</display-name>
+
+  <servlet>
+    <servlet-name>registerServlet1</servlet-name>
+    <servlet-class>com.zhang.web.RegisterServlet</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>registerServlet1</servlet-name>
+    <url-pattern>/registerServlet</url-pattern>
+  </servlet-mapping>
 </web-app>
