--- a/项目_二阶段/src/main/webapp/WEB-INF/web.xml
+++ b/项目_二阶段/src/main/webapp/WEB-INF/web.xml
@@ -9,6 +9,14 @@
     <servlet-name>registerServlet1</servlet-name>
     <servlet-class>com.zhang.web.RegisterServlet</servlet-class>
   </servlet>
+  <servlet>
+    <servlet-name>login</servlet-name>
+    <servlet-class>com.zhang.web.LoginServlet</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>login</servlet-name>
+    <url-pattern>/loginServlet</url-pattern>
+  </servlet-mapping>
   <servlet-mapping>
     <servlet-name>registerServlet1</servlet-name>
     <url-pattern>/registerServlet</url-pattern>
