bran1 jsp|请求转发把学生信息打印成表格展示

--- a/servlet_jsp/src/main/webapp/WEB-INF/web.xml
+++ b/servlet_jsp/src/main/webapp/WEB-INF/web.xml
@@ -4,4 +4,12 @@
 
 <web-app>
   <display-name>Archetype Created Web Application</display-name>
+  <servlet>
+    <servlet-name>jsp1</servlet-name>
+    <servlet-class>com.zhang.Jsp1</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>jsp1</servlet-name>
+    <url-pattern>/jsp01</url-pattern>
+  </servlet-mapping>
 </web-app>
