bran1 el表达式${}和jstl

--- a/servlet_jsp/pom.xml
+++ b/servlet_jsp/pom.xml
@@ -41,6 +41,17 @@
       <version>1.18.12</version>
       <scope>provided</scope>
     </dependency>
+
+    <!-- https://mvnrepository.com/artifact/jstl/jstl -->
+    <!--JSTL-->
+    <dependency>
+      <groupId>javax.servlet</groupId>
+      <artifactId>jstl</artifactId>
+      <version>1.2</version>
+    </dependency>
+
+
+
   </dependencies>
 
 
