bran1  登录注册修改完成

--- a/book_tow/src/main/webapp/WEB-INF/web.xml
+++ b/book_tow/src/main/webapp/WEB-INF/web.xml
@@ -5,7 +5,7 @@
 <web-app>
   <display-name>Archetype Created Web Application</display-name>
 
-  <servlet>
+<!--  <servlet>
     <servlet-name>registerServlet1</servlet-name>
     <servlet-class>com.zhang.web.RegisterServlet</servlet-class>
   </servlet>
@@ -20,5 +20,13 @@
   <servlet-mapping>
     <servlet-name>registerServlet1</servlet-name>
     <url-pattern>/registerServlet</url-pattern>
+  </servlet-mapping>-->
+  <servlet>
+    <servlet-name>userServlet</servlet-name>
+    <servlet-class>com.zhang.web.UserServlet</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>userServlet</servlet-name>
+    <url-pattern>/userServlet</url-pattern>
   </servlet-mapping>
 </web-app>
