--- a/book_tow/pom.xml
+++ b/book_tow/pom.xml
@@ -101,5 +101,12 @@
       <version>1.1.1</version>
     </dependency>
 
+    <!--JSTL-->
+    <dependency>
+      <groupId>javax.servlet</groupId>
+      <artifactId>jstl</artifactId>
+      <version>1.2</version>
+    </dependency>
+
   </dependencies>
 </project>
