--- a/book_tow/src/main/resources/jdbc.properties
+++ b/book_tow/src/main/resources/jdbc.properties
@@ -1,6 +1,6 @@
 username=root
 password=888888
-url=jdbc:mysql://localhost:3306/book
+url=jdbc:mysql://localhost:3306/book?useUnicode=true&characterEncoding=utf-8
 driverClassName=com.mysql.jdbc.Driver
 initialSize=5
 maxActive=10
