--- a/cookie-session/src/main/webapp/WEB-INF/web.xml
+++ b/cookie-session/src/main/webapp/WEB-INF/web.xml
@@ -10,6 +10,10 @@
   </servlet>
   <servlet-mapping>
     <servlet-name>co</servlet-name>
-    <url-pattern>/co</url-pattern>
+    <url-pattern>/cs</url-pattern>
   </servlet-mapping>
+  <!--设置session的会话时长-->
+  <session-config>
+    <session-timeout>30</session-timeout>
+  </session-config>
 </web-app>
