--- a/book_tow/pom.xml
+++ b/book_tow/pom.xml
@@ -107,6 +107,13 @@
       <artifactId>jstl</artifactId>
       <version>1.2</version>
     </dependency>
+    <!-- https://mvnrepository.com/artifact/com.github.penggle/kaptcha -->
+    <!--阿里巴巴的图片验证码kaptcha-->
+    <dependency>
+      <groupId>com.github.penggle</groupId>
+      <artifactId>kaptcha</artifactId>
+      <version>2.3.2</version>
+    </dependency>
 
   </dependencies>
 </project>
