bran1 kapatch 完成图片验证登录

--- a/kpatch/src/main/webapp/WEB-INF/web.xml
+++ b/kpatch/src/main/webapp/WEB-INF/web.xml
@@ -4,4 +4,21 @@
 
 <web-app>
   <display-name>Archetype Created Web Application</display-name>
+  <servlet>
+    <servlet-name>registServlet</servlet-name>
+    <servlet-class>com.zhang.web.KpatchServlet</servlet-class>
+  </servlet>
+  <servlet>
+    <servlet-name>KaptchaServlet</servlet-name>
+    <servlet-class>com.google.code.kaptcha.servlet.KaptchaServlet</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>KaptchaServlet</servlet-name>
+    <url-pattern>/kaptcha.jpg</url-pattern>
+  </servlet-mapping>
+
+  <servlet-mapping>
+    <servlet-name>registServlet</servlet-name>
+    <url-pattern>/registServlet</url-pattern>
+  </servlet-mapping>
 </web-app>
