--- a/book_tow/pom.xml
+++ b/book_tow/pom.xml
@@ -108,11 +108,19 @@
       <version>1.2</version>
     </dependency>
     <!-- https://mvnrepository.com/artifact/com.github.penggle/kaptcha -->
-    <!--阿里巴巴的图片验证码kaptcha-->
+  <!--  &lt;!&ndash;阿里巴巴的图片验证码kaptcha&ndash;&gt;
     <dependency>
       <groupId>com.github.penggle</groupId>
       <artifactId>kaptcha</artifactId>
       <version>2.3.2</version>
+    </dependency>-->
+
+    <dependency>
+      <groupId>com.zhang</groupId>
+      <artifactId>kaptcha12</artifactId>
+      <version>1.0.1</version>
+      <scope>system</scope>
+      <systemPath>${project.basedir}/src/main/webapp/WEB-INF/lib/kaptcha-2.3.2.jar</systemPath>
     </dependency>
 
   </dependencies>
