--- a/book_tow/src/main/webapp/WEB-INF/web.xml
+++ b/book_tow/src/main/webapp/WEB-INF/web.xml
@@ -34,6 +34,16 @@
     <servlet-name>KaptchaServlet</servlet-name>
     <servlet-class>com.google.code.kaptcha.servlet.KaptchaServlet</servlet-class>
   </servlet>
+
+  <servlet>
+    <servlet-name>cart</servlet-name>
+    <servlet-class>com.zhang.web.ItemsServlet</servlet-class>
+  </servlet>
+
+  <servlet-mapping>
+    <servlet-name>cart</servlet-name>
+    <url-pattern>/items</url-pattern>
+  </servlet-mapping>
   <servlet-mapping>
     <servlet-name>KaptchaServlet</servlet-name>
     <url-pattern>/kaptcha.jpg</url-pattern>
