--- a/book_tow/src/main/webapp/WEB-INF/web.xml
+++ b/book_tow/src/main/webapp/WEB-INF/web.xml
@@ -43,6 +43,10 @@
         <filter-name>filter1</filter-name>
         <filter-class>com.zhang.filter.CommonsFilter</filter-class>
     </filter>
+    <filter>
+        <filter-name>filter2</filter-name>
+        <filter-class>com.zhang.filter.TranctionFilter</filter-class>
+    </filter>
 
 
   <servlet-mapping>
@@ -66,4 +70,17 @@
         <filter-name>filter1</filter-name>
         <url-pattern>/pages/manager/*</url-pattern>
     </filter-mapping>
+    <filter-mapping>
+        <filter-name>filter2</filter-name>
+        <url-pattern>/*</url-pattern>
+    </filter-mapping>
+
+   <error-page>
+        <error-code>404</error-code>
+        <location>/error/404.jsp</location>
+    </error-page>
+    <error-page>
+        <error-code>500</error-code>
+        <location>/error/500.jsp</location>
+    </error-page>
 </web-app>
