--- a/jsonweb/pom.xml
+++ b/jsonweb/pom.xml
@@ -115,6 +115,13 @@
         <artifactId>kaptcha</artifactId>
         <version>2.3.2</version>
       </dependency>-->
+    <!--gson-->
+    <dependency>
+      <groupId>com.gson</groupId>
+      <artifactId>goson</artifactId>
+      <scope>system</scope>
+      <systemPath>${project.basedir}/src/main/webapp/WEB-INF/lib/gson-2.2.4.jar</systemPath>
+    </dependency>
 
 
   </dependencies>
