--- a/jsonweb/pom.xml
+++ b/jsonweb/pom.xml
@@ -123,6 +123,27 @@
       <systemPath>${project.basedir}/src/main/webapp/WEB-INF/lib/gson-2.2.4.jar</systemPath>
     </dependency>
 
+    <dependency>
+      <groupId>com.hamcrest</groupId>
+      <artifactId>hamcrest</artifactId>
+      <scope>system</scope>
+      <systemPath>${project.basedir}/src/main/webapp/WEB-INF/lib/hamcrest-core-1.3.jar</systemPath>
+    </dependency>
+
+    <dependency>
+      <groupId>standard-impl</groupId>
+      <artifactId>standard</artifactId>
+      <scope>system</scope>
+      <systemPath>${project.basedir}/src/main/webapp/WEB-INF/lib/taglibs-standard-impl-1.2.1.jar</systemPath>
+    </dependency>
+
+    <dependency>
+      <groupId>standard-spec</groupId>
+      <artifactId>standard</artifactId>
+      <scope>system</scope>
+      <systemPath>${project.basedir}/src/main/webapp/WEB-INF/lib/taglibs-standard-spec-1.2.1.jar</systemPath>
+    </dependency>
+
 
   </dependencies>
 </project>
